# robotica-ik-lib

./: .gitignore  CMakeLists.txt
ik_solver/: CMakeLists.txt
ik_solver/include/: IKLogging.hpp  IKSolver.hpp  InverseKinematics.hpp  Vector3D.hpp
ik_solver/include/ik_solver/: IKSolver.hpp  Joint.hpp  Link.hpp  Vector3D.hpp
ik_solver/src/: IKSolver.cpp  InverseKinematics.cpp  Joint.cpp  Link.cpp  Vector3D.cpp  main.cpp
robot_arm/: CMakeLists.txt
robot_arm/include/: ARM_CONFIG.hpp  Joint.hpp  Link.hpp  RobotArm.hpp  Vector3D.hpp
robot_arm/src/: Joint.cpp  Link.cpp  RobotArm.cpp  Vector3D.cpp
src/: main  main.cpp  main_fk_tester.cpp  main_vector_tester.cpp
